  * dh_makeshlibs: Make -VUpstream-Version the default in
    compat 12 when -V is omitted.  (Closes: #896464)
  * dh_makeshlibs: Correct handling of an explicit -V when
    a source builds multiple library packages and provides
    explicit shlibs files for a subset of them.  Previously,
    the -V option could have been ignored for some of the
    packages containing libraries.

  [ Dmitry Shachnev ]
  * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
    cross-compilation.  (Closes: #895286)

  [ Helmut Grohne ]
  * cmake: Pass CC/CXX environment variables down during native
    compilation as well. (Closes: #897083)

 -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000

debhelper (11.2.1) unstable; urgency=medium

  * Buildsystem.pm: Correctly pass build directory values to
    target buildsystems.  Thanks to Helmut Grohne, Adrian Bunk
    and Tobias Frost for the reports and debugging.
    (Closes: #895174, #895181)
  * Buildsystems: Avoid choosing a build system for the clean
    step if it is not necessary.  Previously, debhelper could
    choose a "random" build system that would prefer building
    in a separate build directory on the basis that the build
    directory should be removed.  With this, change we only
    choose such a build system if there is a build directory
    to remove.

 -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 08:47:35 +0000

debhelper (11.2) unstable; urgency=medium

  [ Niels Thykier ]
  * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
    backports also work for debhelper with single integer versions.
    Thanks to Trent W. Buck for the suggestion.  (Closes: #894666)
  * makefile.pm: Use -Oline with make.  This avoids make mistaking
    a target name for a value for -O and should make build time
    outs less likely for "long" targets.  (Closes: #894573)
  * Dh_Lib.pm: Fix bug that make debhelper trip on packages with
    the version "0".  Thanks to Chris Lamb for reporting the bug